<resources>
    <string name="app_name">MeusGames</string>
    <string name="game_image">Game image</string>
    <string name="game_thumbnail">Game Banner</string>
    <string name="edit_game_details">Edit game details</string>
    <string name="go_back">Go back</string>
    <string name="released">Lançamento: %s</string>
    <string name="add_a_new_game">Add a new game</string>
    <string name="name">Name</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="save_game">Save game</string>
    <string name="add_game_image">Add game image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="delete_game">Delete game</string>
</resources>