<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameDetailsActivity">

    <ImageView
        android:id="@+id/ivGameBanner"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/game_thumbnail"
        android:scaleType="centerCrop"
        android:src="@drawable/god_of_war_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnEditGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="190dp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        android:contentDescription="@string/edit_game_details" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/go_back"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvGameNameHighlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name Placeholder"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="175dp"
        android:layout_marginStart="20dp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivGameBanner">

        <TextView
            android:id="@+id/tvGameName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name Placeholder"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvGameReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="Lançamento: 1984"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvGameDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Neque viverra justo nec ultrices dui sapien. Quis varius quam quisque id diam vel quam elementum pulvinar. Est ullamcorper eget nulla facilisi etiam dignissim diam quis."
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>